[gd_scene load_steps=3 format=3 uid="uid://d3t62ljuybvo4"]

[ext_resource type="Script" uid="uid://cysbi2u08jyp6" path="res://main_ui.gd" id="1_7clx1"]
[ext_resource type="Script" uid="uid://brp8k0dvjia72" path="res://connection_manager.gd" id="2_0wfyh"]

[node name="MainUI" type="Node2D"]
script = ExtResource("1_7clx1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 48.0
offset_right = 163.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hostname:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "host:port"

[node name="BtnConnect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="BtnShowboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Showboard"

[node name="ConnectionManager" type="Node" parent="."]
script = ExtResource("2_0wfyh")
